--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background: rgb(0, 217, 217);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 217, 217, 1) 0%,
+    rgba(255, 39, 80, 1) 100%
+  );
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-bottom: 20px;
 }
 
 .App-link {
