--- a/src/App.css
+++ b/src/App.css
@@ -45,14 +45,31 @@
 
   .listBooks::-webkit-scrollbar-thumb {
     background: #00d9d9;
-    border-radius: 20px;
+    border-radius: 10px;
   }
   .listBooks::-webkit-scrollbar-track {
     background: #9b3548;
-    border-radius: 20px;
+    border-radius: 10px;
   }
 }
 
-.placeHolder::placeholder {
-  color: #868585 !important;
+.listComments {
+  height: 50vh;
+  overflow: auto;
+}
+
+@media screen and (min-width: 1024px) {
+  .listComments::-webkit-scrollbar {
+    width: 4px;
+    right: -10px;
+  }
+
+  .listComments::-webkit-scrollbar-thumb {
+    background: #00d9d9;
+    border-radius: 20px;
+  }
+  .listComments::-webkit-scrollbar-track {
+    background: rgba(255, 39, 80, 0.1);
+    border-radius: 20px;
+  }
 }
