--- a/src/custom.css
+++ b/src/custom.css
@@ -11,6 +11,10 @@
   font-style: italic;
 }
 
+.coloredStars {
+  color: #00D9D9;
+}
+
 /*!
  * Bootstrap  v5.3.2 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
