--- a/src/custom.scss
+++ b/src/custom.scss
@@ -14,6 +14,9 @@ $info: #FF2750;
     font-style: italic;
   }
   
+  .coloredStars{
+    color: #00D9D9;
+  }
 
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss"
